; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/usbip/extr_usbip_common.c_correct_endian_cmd_unlink.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/usbip/extr_usbip_common.c_correct_endian_cmd_unlink.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usbip_header_cmd_unlink = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.usbip_header_cmd_unlink*, i32)* @correct_endian_cmd_unlink to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @correct_endian_cmd_unlink(%struct.usbip_header_cmd_unlink* %0, i32 %1) #0 {
  %3 = alloca %struct.usbip_header_cmd_unlink*, align 8
  %4 = alloca i32, align 4
  store %struct.usbip_header_cmd_unlink* %0, %struct.usbip_header_cmd_unlink** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %14

7:                                                ; preds = %2
  %8 = load %struct.usbip_header_cmd_unlink*, %struct.usbip_header_cmd_unlink** %3, align 8
  %9 = getelementptr inbounds %struct.usbip_header_cmd_unlink, %struct.usbip_header_cmd_unlink* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @cpu_to_be32(i32 %10)
  %12 = load %struct.usbip_header_cmd_unlink*, %struct.usbip_header_cmd_unlink** %3, align 8
  %13 = getelementptr inbounds %struct.usbip_header_cmd_unlink, %struct.usbip_header_cmd_unlink* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 4
  br label %21

14:                                               ; preds = %2
  %15 = load %struct.usbip_header_cmd_unlink*, %struct.usbip_header_cmd_unlink** %3, align 8
  %16 = getelementptr inbounds %struct.usbip_header_cmd_unlink, %struct.usbip_header_cmd_unlink* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @be32_to_cpu(i32 %17)
  %19 = load %struct.usbip_header_cmd_unlink*, %struct.usbip_header_cmd_unlink** %3, align 8
  %20 = getelementptr inbounds %struct.usbip_header_cmd_unlink, %struct.usbip_header_cmd_unlink* %19, i32 0, i32 0
  store i32 %18, i32* %20, align 4
  br label %21

21:                                               ; preds = %14, %7
  ret void
}

declare dso_local i32 @cpu_to_be32(i32) #1

declare dso_local i32 @be32_to_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
